--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "hal": "~0.1.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/mocha --recursive -R xunit test/ > test-reports.xml"
   },
   "author": "",
   "license": "ISC",
