--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "NodejsContinuousIntegration",
-  "version": "0.0.0",
-  "description": "",
-  "main": "app.js",
-  "dependencies": {
-    "mongoose": "~3.8.24",
-    "express": "~4.12.0",
-    "body-parser": "~1.12.0",
-    "method-override": "~2.3.1",
-    "hal": "~0.1.0"
-  },
-  "scripts": {
-    "test": "./node_modules/.bin/mocha --recursive -R xunit test/ > test-reports.xml"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "should": "~5.2.0",
-    "mocha": "~2.2.1"
-  }
+    "name": "NodejsContinuousIntegration",
+    "version": "0.0.0",
+    "description": "",
+    "main": "app.js",
+    "dependencies": {
+        "mongoose": "~3.8.24",
+        "express": "~4.12.0",
+        "body-parser": "~1.12.0",
+        "method-override": "~2.3.1",
+        "hal": "~0.1.0"
+    },
+    "scripts": {
+        "test": "./node_modules/.bin/mocha --recursive -R xunit test/ > test-reports.xml"
+    },
+    "author ": "pjuvigny",
+    "license ": "ISC",
+    "devDependencies ": {
+        "should ": "~5.2.0 ",
+        "mocha ": "~2.2.1 "
+    }
 }
