--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,10 @@ build/Release
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git-
 node_modules
 
-test-reports.xml
+integ-tests-report.xml
+unit-tests-report.xml
+
+application.log
 
 # Users Environment Variables
 .lock-wscript
